# Regulatory_Monitoring_Pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  _vdd.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/regmon/: __init__.py  __main__.py  cli.py  logging_config.py  scheduler.py
src/regmon/actions/: __init__.py  planner.py  templates.py
src/regmon/approval/: __init__.py  gate.py  models.py  store.py
src/regmon/classification/: __init__.py  agent.py  llm_classifier.py  models.py  rules.py
src/regmon/config/: __init__.py  default_sources.yaml  secrets.py  settings.py  sources.py
src/regmon/crawler/: __init__.py  base.py  fetcher.py  rate_limiter.py  robots.py  storage.py
src/regmon/crawler/adapters/: __init__.py  base.py  eu.py  fda.py  rbi.py  registry.py  sebi.py
src/regmon/db/: __init__.py  audit.py  base.py  document_store.py  engine.py  records.py
src/regmon/dedup/: __init__.py  engine.py  hashing.py  store.py
src/regmon/embeddings/: __init__.py  backends.py  chunking.py  indexer.py  providers.py  vectorstore.py
src/regmon/models/: __init__.py  domain.py  enums.py
src/regmon/normalize/: __init__.py  boilerplate.py  cleaner.py  language.py  text.py
src/regmon/notifications/: __init__.py  channels.py  digest.py  service.py
src/regmon/parser/: __init__.py  agent.py  html.py  metadata.py  pdf.py
src/regmon/pipeline/: __init__.py  context.py  orchestrator.py  state.py
src/regmon/rag/: __init__.py  models.py  service.py
src/regmon/risk/: __init__.py  agent.py  rationale.py  scoring.py
src/regmon/summarization/: __init__.py  agent.py  llm.py  models.py
tests/: conftest.py  test_actions.py  test_approval.py  test_classification.py  test_config.py  test_db.py  test_dedup.py  test_embeddings.py  test_integration.py  test_logging_config.py  test_models.py  test_normalize.py  test_notifications.py  test_parser.py  test_risk.py
